WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260526
[css-grid] css-grid/subgrid/line-names-010.html failing
https://bugs.webkit.org/show_bug.cgi?id=260526
Summary
[css-grid] css-grid/subgrid/line-names-010.html failing
Sammy Gill
Reported
2023-08-22 11:10:35 PDT
css-grid/subgrid/line-names-010.html is failing on WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-22 11:12:00 PDT
<
rdar://problem/114271506
>
Sammy Gill
Comment 2
2023-08-24 15:46:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17039
EWS
Comment 3
2023-08-25 09:06:18 PDT
Committed
267281@main
(ac15c399013c): <
https://commits.webkit.org/267281@main
> Reviewed commits have been landed. Closing PR #17039 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug